fix  documentation  admin roles,user
